--- a/contacts.html
+++ b/contacts.html
@@ -1,253 +1,49 @@
 ---
 layout: default
-title:  Добро пожаловать!
-menu: index
+title:  Контакты
+menu: contacts
 ---
-<!-- banner start -->
-<div class="banner">
+<!-- page intro start -->
+<div class="page-intro">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="page-title">Контакты</h1>
+      </div>
+    </div>
+  </div>
 </div>
-<!-- banner end -->
-			<!-- main start -->
-			<section class="main">
+<!-- page intro end -->
 
-				<!-- section start -->
-				<div class="section">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-12">
-								<h1 class="text-center">What We Offer</h1>
-								<div class="separator"></div>
-								<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-								<div class="row">
-									<div class="col-sm-4">
-										<div class="icon-box">
-											<i class="fa fa-arrows-alt object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="0"></i>
-											<h2>Pellentesque fermentu.</h2>
-											<p>Voluptatem ad provident non <a href="#">repudiandae</a> veritatis beatae cupiditate amet reiciendis.</p>
-										</div>
-									</div>
-									<div class="col-sm-4">
-										<div class="icon-box">
-											<i class="fa fa-laptop object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200"></i>
-											<h2>Pellentesque fermentu.</h2>
-											<p>Iure sequi unde hic. Sapiente quaerat labore sequi inventore veritatis cumque.</p>
-										</div>
-									</div>
-									<div class="col-sm-4">
-										<div class="icon-box">
-											<i class="fa fa-sitemap object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400"></i>
-											<h2>Pellentesque fermentu.</h2>
-											<p>Inventore dolores aut laboriosam cum consequuntur delectus sequi! Eum est.</p>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- section end -->
+<!-- main content wrapper start -->
+<div class="main-content-wrapper">
+  <div class="container">
+    <div class="row">
 
-				<!-- section start -->
-				<div class="section bg-color-light">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-6">
-								<img class="img-responsive center-block" src="../public/template/images/section-image-1.png" alt="iVega">
-							</div>
-							<div class="col-md-6">
-								<h2>Nulla luctus ipsum vel lorem venenatis</h2>
-								<p class="space">Sed eget pulvinar quam, vel feugiat enim. Aliquam erat volutpat. Phasellus eu porta ipsum. Suspendisse aliquet imperdiet commodo. Aenean vel lacinia elit. Class aptent taciti sociosqu ad litora torquent per. Vestibulum velmo.</p>
-								<a href="page-about.html" class="btn btn-default btn-lg">Learn More</a>
-							</div>
-						</div>
-					</div>
-					<br>
-					<br>
-					<br>
-					<div class="bg-color-gray call-to-action">
-						<div class="container">
-							<div class="row">
-								<div class="col-md-8">
-									<h2 class="text-center">We offer more, to meet your every need!</h2>
-								</div>
-								<div class="col-md-4 text-center">
-									<a href="#" class="btn btn-lg btn-white">Purchase</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<br>
-					<br>
-					<div class="container">
-						<h1 class="text-center">Our Services</h1>
-						<div class="separator"></div>
-						<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<div class="row">
-							<div class="col-sm-6 col-md-4">
-								<div class="icon-box-3 icon-right clearfix object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="0">
-									<i class="fa fa-desktop"></i>
-									<div class="text">
-										<h4>100% Responsive Design</h4>
-										<p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
-									</div>
-								</div>
-								<div class="icon-box-3 icon-right clearfix object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="100">
-									<i class="fa fa-bold"></i>
-									<div class="text">
-										<h4>Bootstrap Based</h4>
-										<p class="small">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-									</div>
-								</div>
-								<div class="icon-box-3 icon-right clearfix object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="200">
-									<i class="fa fa-leaf"></i>
-									<div class="text">
-										<h4>Clean &amp; powerful code</h4>
-										<p class="small">Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-									</div>
-								</div>
-								<div class="icon-box-3 icon-right clearfix object-non-visible" data-animation-effect="fadeInLeftSmall" data-effect-delay="300">
-									<i class="fa fa-cog"></i>
-									<div class="text">
-										<h4>Unlimited layouts</h4>
-										<p class="small">Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-6 col-md-4">
-								<img src="../public/template/images/section-image-4.png" alt="ivega" class="object-non-visible center-block" data-animation-effect="fadeInDownSmall" data-effect-delay="400">
-							</div>							
-							<div class="col-sm-12 col-md-4">
-								<div class="icon-box-3 icon-left clearfix object-non-visible" data-animation-effect="fadeInRightSmall" data-effect-delay="0">
-									<i class="fa fa-html5"></i>
-									<div class="text">
-										<h4>HTML5/CSS3</h4>
-										<p class="small">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-									</div>
-								</div>
-								<div class="icon-box-3 icon-left clearfix object-non-visible" data-animation-effect="fadeInRightSmall" data-effect-delay="100">
-									<i class="fa fa-rocket"></i>
-									<div class="text">
-										<h4>Font Awesome Icons</h4>
-										<p class="small">Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-									</div>
-								</div>
-								<div class="icon-box-3 icon-left clearfix object-non-visible" data-animation-effect="fadeInRightSmall" data-effect-delay="200">
-									<i class="fa fa-file-o"></i>
-									<div class="text">
-										<h4> Well Documented</h4>
-										<p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad.</p>
-									</div>
-								</div>
-								<div class="icon-box-3 icon-left clearfix object-non-visible" data-animation-effect="fadeInRightSmall" data-effect-delay="300">
-									<i class="fa fa-gift"></i>
-									<div class="text">
-										<h4>Lot's of Goodies</h4>
-										<p class="small">Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- section end -->
+      <!-- main content start -->
+      <section class="main-content col-md-12">
+        <div class="icon-box">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15075.366210717157!2d37.43137331555361!3d55.82853910934179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b548753e57bc27%3A0x5d316044540a4270!2z0KLRg9GI0LjQvdGB0LrQsNGPINGD0LsuLCDQnNC-0YHQutCy0LA!5e0!3m2!1sru!2sru!4v1481988033080" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>    
+      </section>
+      <!-- sidebar start -->
+      <aside class="sidebar col-md-12">
+          <h3 class="title">Контакты</h3>
+          <ul class="list">
+            <li><strong>ООО "Ткань2"</strong></li>
+            <li><i class="fa fa-home pr-10"></i>Москва</li>
+            <li><i class="fa fa-phone pr-10"></i><abbr title="Phone">P:</abbr> +7-999-888-77-01</li>
+          </ul>
+          <ul class="list">
+            <li><strong>Email</strong></li>
+            <li><i class="fa fa-envelope pr-10"></i><a href="mailto:#">info@tkan2.ru</a></li>
+          </ul>
+      </aside>
+      <!-- sidebar end -->   
+      <br><br>
+      <!-- main content end -->
+    </div>
 
-				<!-- section start -->
-				<div class="section">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-12">
-								<h1 class="text-center">Why Choose Us</h1>
-								<div class="separator"></div>
-								<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, voluptas, obcaecati <br> cumque ad voluptatibus molestiae minus architecto voluptatum provident.</p>
-								<br>
-								<div class="row">
-									<div class="col-md-6 col-md-push-6">
-										<img class="img-responsive center-block pb object-non-visible" data-animation-effect="fadeInUpSmall" src="../public/template/images/section-image-2.png" alt="iVega">
-									</div>
-									<div class="col-md-6 col-md-pull-6">
-										<h3>Uspendisse id sem elementum condimentum lorem</h3>
-										<p>Sed eget pulvinar quam, vel feugiat enim. Aliquam erat volutpat. Phasellus eu porta ipsum. Suspendisse aliquet imperdiet commodo. Aenean vel lacinia elit. Class aptent taciti sociosqu ad litora torquent per. Vestibulum velmo.</p>
-										<ul class="list-triangle">
-											<li class="object-non-visible" data-animation-effect="fadeInUpSmall">Etiam sed dolor ac diam volutpat </li>
-											<li class="object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="100">Sed eget pulvinar quam, vel feugiat enim aliquam </li>
-											<li class="object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200">Erat volutpat. Phasellus eu porta ipsum suspendisse aliquet imperdiet </li>
-											<li class="object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="300">Phasellus eu porta ipsum. Suspendisse aliquet imperdiet commodo </li>
-											<li class="object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="300">Quas voluptas obcaecati.</li>
-											<li class="object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="300">aliquet imperdiet commodo.</li>
-										</ul>
-										<a href="page-about.html" class="btn btn-white btn-lg object-non-visible" data-animation-effect="flipInX"  data-effect-delay="200">Learn More</a>
-									</div>
-								</div>
-								<br>
-								<hr>
-								<h1 class="text-center space-top">Skills &amp; Stats</h1>
-								<div class="separator"></div>
-								<p class="text-center">Incidunt, mollitia, laboriosam, officiis adipisci ipsum ipsam ab ducimus dolor <br> omnis facere minus vero illo officia commodi voluptatem voluptate aliquam dicta suscipit.</p>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="space-top space-bottom">
-											<h4>HTML5</h4>
-											<div class="progress">
-												<div class="progress-bar progress-bar-default" role="progressbar" data-animate-width="80%">
-													<span class="object-non-visible" data-animation-effect="fadeInLeftBig" data-effect-delay="700">80%</span>
-												</div>
-											</div>
-											<h4>CSS3</h4>
-											<div class="progress">
-												<div class="progress-bar progress-bar-default" role="progressbar" data-animate-width="90%">
-													<span class="object-non-visible" data-animation-effect="fadeInLeftBig" data-effect-delay="700">90%</span>
-												</div>
-											</div>
-											<h4>JQUERY</h4>
-											<div class="progress">
-												<div class="progress-bar progress-bar-default" role="progressbar" data-animate-width="75%">
-													<span class="object-non-visible" data-animation-effect="fadeInLeftBig" data-effect-delay="700">75%</span>
-												</div>
-											</div>
-											<h4>PHP</h4>
-											<div class="progress">
-												<div class="progress-bar progress-bar-default" role="progressbar" data-animate-width="85%">
-													<span class="object-non-visible" data-animation-effect="fadeInLeftBig" data-effect-delay="700">85%</span>
-												</div>
-											</div>
-											<h4>DESIGN</h4>
-											<div class="progress">
-												<div class="progress-bar progress-bar-default" role="progressbar" data-animate-width="80%">
-													<span class="object-non-visible" data-animation-effect="fadeInLeftBig" data-effect-delay="700">80%</span>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="stats">
-											<div class="stat-box bt-clear">
-												<i class="fa fa-cloud-download"></i>
-												<h5>downloads</h5>
-												<span data-to="1525" data-speed="3000">0</span>
-											</div>
-											<div class="stat-box bt-clear br-clear">
-												<i class="fa fa-user"></i>
-												<h5>Users</h5>
-												<span data-to="2651" data-speed="3000">0</span>
-											</div>
-											<div class="stat-box">
-												<i class="fa fa-briefcase"></i>
-												<h5>purchases</h5>
-												<span data-to="1320" data-speed="3000">0</span>
-											</div>
-											<div class="stat-box br-clear">
-												<i class="fa fa-thumbs-o-up"></i>
-												<h5>likes</h5>
-												<span data-to="3509" data-speed="3000">0</span>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- section end -->
-
-			</section>
-			<!-- main end -->
+  </div>
+</div>
+<!-- main content wrapper end -->
