--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ menu: index
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12">
-								<h1 class="page-title">Наша продукция</h1>
+								<h1 class="page-title">Главная</h1>
 							</div>
 						</div>
 					</div>
