--- a/company.html
+++ b/company.html
@@ -22,7 +22,7 @@ menu: company
 
       <!-- main content start -->
       <section class="main-content col-md-12">
-        <h1 class="title"> Мы <span class="logo"><a href="index.html"><span>Т</span>кань2</a></span></h1>
+        <h1 class="title"> Мы <span class="logo"><a href="index.html"><span>К</span>одес</a></span></h1>
         <div class="separator-2"></div>
         <p>Надежный поставщик технической ткани оптом в России.</p>
         <p>В настоящее время фирма специализируется на поставке бязи, ситца, брезента и вафельного полотна. У нас широкий ассортимент технических тканей для различных отраслей.</p>
