--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ menu: index
 							</div>
 							<div class="col-md-6">
 								<h2>О компании</h2>
-								<p class="space">ООО "Ткань2" - надежный поставщик технической ткани оптом в России. В настоящее время фирма специализируется на поставке бязи, ситца, брезента и вафельного полотна. У нас широкий ассортимент технических тканей для различных отраслей.</p>
+								<p class="space">ООО "Кодес" - надежный поставщик технической ткани оптом в России. В настоящее время фирма специализируется на поставке бязи, ситца, брезента и вафельного полотна. У нас широкий ассортимент технических тканей для различных отраслей.</p>
 								<a href="company.html" class="btn btn-default btn-lg">Узнать подробнее</a>
 							</div>
 						</div>
