--- a/contacts.html
+++ b/contacts.html
@@ -23,20 +23,20 @@ menu: contacts
       <!-- main content start -->
       <section class="main-content col-md-12">
         <div class="icon-box">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15075.366210717157!2d37.43137331555361!3d55.82853910934179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b548753e57bc27%3A0x5d316044540a4270!2z0KLRg9GI0LjQvdGB0LrQsNGPINGD0LsuLCDQnNC-0YHQutCy0LA!5e0!3m2!1sru!2sru!4v1481988033080" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25331.618979616353!2d37.498707426020395!3d55.86232036234881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5378c597e8ec9%3A0xb2ddee35d833749e!2z0KHQtdC90LXQttGB0LrQsNGPINGD0LsuLCA20JAsINCc0L7RgdC60LLQsCwg0KDQvtGB0YHQuNGPLCAxMjU0MTM!5e0!3m2!1sru!2sru!4v1482256391320" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>    
       </section>
       <!-- sidebar start -->
       <aside class="sidebar col-md-12">
           <h3 class="title">Контакты</h3>
           <ul class="list">
-            <li><strong>ООО "Ткань2"</strong></li>
+            <li><strong>ООО "Кодес"</strong></li>
             <li><i class="fa fa-home pr-10"></i>Москва</li>
-            <li><i class="fa fa-phone pr-10"></i><abbr title="Phone">P:</abbr> +7-999-888-77-01</li>
+            <li><i class="fa fa-phone pr-10"></i><abbr title="Phone">P:</abbr> 8 (925) 117-38-34</li>
           </ul>
           <ul class="list">
             <li><strong>Email</strong></li>
-            <li><i class="fa fa-envelope pr-10"></i><a href="mailto:#">info@tkan2.ru</a></li>
+            <li><i class="fa fa-envelope pr-10"></i><a href="mailto:#">ikodes@yandex.ru</a></li>
           </ul>
       </aside>
       <!-- sidebar end -->   
