--- a/contacts.html
+++ b/contacts.html
@@ -31,7 +31,7 @@ menu: contacts
           <h3 class="title">Контакты</h3>
           <ul class="list">
             <li><strong>ООО "Кодес"</strong></li>
-            <li><i class="fa fa-home pr-10"></i>Москва</li>
+            <li><i class="fa fa-home pr-10"></i>Москва, ул. Сенежская, 6а</li>
             <li><i class="fa fa-phone pr-10"></i><abbr title="Phone">P:</abbr> 8 (925) 117-38-34</li>
           </ul>
           <ul class="list">
