--- a/dostavka.html
+++ b/dostavka.html
@@ -23,7 +23,7 @@ menu: dostavka
       <!-- main content start -->
       <section class="main-content col-md-6 col-sm-6">
         <div class="icon-box">
-          <i class="fa fa-truck  object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400"></i>
+          <i class="fa fa-truck  object-non-visible" data-animation-effect="fadeInUpSmall"></i>
         </div>    
       </section>
       <section class="main-content col-md-6">
